# Warlocks

./: Bot.cpp  Bot.h  CMakeLists.txt  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  Loaders.cpp  Loaders.h  Model.cpp  Model.h  Player.cpp  Player.h  Settings.cpp  Settings.h  TextView.cpp  TextView.h  WMath.cpp  WMath.h  Warlock.cpp  Warlock.h  main.cpp
Shaders/: FragmentShader.fsh  TextFragment.fsh  TextVertex.vsh  VertexShader.vsh
Textures/: barr.dds  field.dds  fireball.dds  hp.dds  magma.dds  text.dds  warlock.dds
